--- a/Frontend/afromusic/package.json
+++ b/Frontend/afromusic/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-emotion": "^10.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "redux-saga": "^1.2.3",
