--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --ignore './tests' index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
