--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3"
-
 services:
   frontend:
     build: ./Frontend
@@ -8,6 +6,11 @@ services:
     stdin_open: true
     networks:
       - mern-app
+    volumes:
+      - /app/node_modules
+      - ./Frontend:/app
+    environment:
+      - CHOKIDAR_USEPOLLING=true
 
   backend:
     depends_on:
@@ -33,3 +36,4 @@ networks:
 volumes:
   mongo-data:
     driver: local
+  afro-music:
