--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/redux-saga": "^0.10.5",
     "axios": "^1.5.0",
     "framer-motion": "^10.16.4",
     "mongodb": "^6.0.0",
