--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3"
+
 services:
   frontend:
     build: ./Frontend
@@ -6,11 +8,6 @@ services:
     stdin_open: true
     networks:
       - mern-app
-    volumes:
-      - /app/node_modules
-      - ./Frontend:/app
-    environment:
-      - CHOKIDAR_USEPOLLING=true
 
   backend:
     depends_on:
@@ -36,4 +33,3 @@ networks:
 volumes:
   mongo-data:
     driver: local
-  afro-music:
